maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:24: error: ';' expected but '<-' found.
if (aMurOuest(n+1,m)) && n<-getMondeLargeur -1){
                          ^